# qrcode-rust

./: Cargo.toml
src/: bits.rs  canvas.rs  cast.rs  ec.rs  lib.rs  optimize.rs  spec.rs  types.rs
src/render/: image.rs  mod.rs  svg.rs
