[package]
name = "qrcode"
description = "QR code encoder in Rust"
license = "MIT / Apache-2.0"
version = "0.11.0"
authors = ["kennytm <kennytm@gmail.com>", "Robin Kock <robin@kock-hamburg.de>"]
keywords = ["qrcode"]
repository = "https://github.com/kennytm/qrcode-rust"
readme = "README.md"
exclude = [
    ".travis.yml", ".gitignore", "test-data/**"
]
edition = "2018"

[dependencies]
heapless = "0.5.1"
typenum = { version = "1.11.2", features = ["no_std"] }
